# cargo-ci

./: Cargo.toml  README.md
src/: main.rs
